# uth-sim

./: .gitignore  README.md  pyproject.toml
tests/: test_advisor.py  test_evaluator.py  test_game.py
uth/: __init__.py  advise.py  advisor.py  bankroll.py  cards.py  cli.py  evaluator.py  game.py  paytables.py  simulator.py  strategy.py
